	* fix the required dbus version in the docs
	* can now send DBUS_TYPE_SIGNATURE as Type[]
	* rewrite Variant handling to work with complex types
	* add $JAVA_HOME/include and $JAVA_HOME/include/linux to CFLAGS
	  (Fix from Joshua Nichols <nichoj -at- gentoo -dot- org>)
	* remove unneccessary build warnings
	  (Fix from Joshua Nichols <nichoj -at- gentoo -dot- org>)

Version 1.9:

	* Map and List handling optimisations 
	* Struct optimisations
	* Canonicalise D-Bus spelling in documentation
	* Update documentation
	* Implement cross-bindings test suite
	* add getPeerRemoteObject method
	* add addSigHandler methods which filter on sender and path
	* Signal handling optimisations
	* deprecating service in favour of bus name. Deprecated registerService in
	  favour of requestBusName

Version 1.8:

	* stop dvips printing on wierd systems
	* Doc patches from Dick Hollenbeck <dick -at- softplc -dot- com>
	* reduce TIMEOUT to 1ms and check for outbound messages in the JNI; reduces
	  RTT from 100ms to ~1ms
	* Remove two java collections which were doing a lot of allocation and
	  deallocation and replace with data structures based on arrays.
	* add removeSigHandler method
	* add profiling application
	* handle incoming & outgoing native array types natively (biiiig savings
			here)

Version 1.7:
	
	* compiles with -Xlint:all
	* fixed struct/nested struct creation
	* compile with -Os -O -Wall -Werror -g:none and strip
	* allow overloading methods by argument type
	* getJavaType bugfix from Antoine Perdaens
	* nulls in Variant fix from Antoine Perdaens
	* Variant parameter checking in <init>
	* CreateInterface now maintains order of parameters to signals

Version 1.6:

	* Custom serializable objects
	* Thread pool model
	* CreateInterfaces updated to handle new Structs, annotations, Signals etc

Version 1.5:
	
	* Remove static library dependency

Version 1.4:

	* provide call info to called methods
	* check for disconnections and throw
	* complete rewrite of Structs